feat/#1 Add barns logic