@@ -3,20 +3,25 @@ package com.farmin.farminserver.domain.user.dto;
 import lombok.RequiredArgsConstructor;
 import com.farmin.farminserver.entity.user.UserEntity;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @RequiredArgsConstructor
 public class CustomUserDetail implements UserDetails {
 
     private final UserEntity user;
 
+    public CustomUserDetail(UserEntity user) {
+        this.user = user;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         // 여기서는 기본적인 권한 리스트를 반환하고, 필요시 실제 권한 정보로 대체 가능
-        return Collections.emptyList(); // 또는 user의 권한 리스트를 반환하도록 설정
+        return List.of(new SimpleGrantedAuthority(user.getRole().name())); //Admin 권한 반영1
     }
 
     @Override
